# ARENA

./: .gitignore  README.md  ideeDeBase.txt
Blueprint/: 01_ARCHITECTURE_GLOBALE.md  02_SETTINGS_CONFIGURATION.md  03_EXP01_BUDGET_DU_GROUPE.md  04_EXP02_CONSEIL_DE_CRISE.md  05_EXP03_TRAITRE_INVISIBLE.md  06_EXP04_ENQUETE_COLLECTIVE.md  07_EXP05_NEGOCIATION_RESSOURCES.md  08_EXP06_POUVOIR_QUI_TOURNE.md  09_EXP07_INFORMATION_FRAGMENTEE.md  10_EXP08_REPARTITION_PRIORITES.md  11_EXP09_CONSTRUCTION_REGLE.md  12_EXP10_LOI_DU_GROUPE.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: experiments.py  providers.py  runs.py  settings.py  ws.py
backend/app/core/: agent.py  engine.py  prompt_builder.py  round_manager.py  seed.py
backend/app/experiments/: __init__.py  base.py  budget_groupe.py  conseil_crise.py  construction_regle.py  enquete_collective.py  information_fragmentee.py  loi_du_groupe.py  negociation_ressources.py  pouvoir_tourne.py  repartition_priorites.py  traitre_invisible.py
backend/app/models/: agent.py  experiment.py  run.py  settings.py
backend/app/providers/: base.py  lm_studio.py  ollama.py  openrouter.py  registry.py
backend/app/storage/: export.py  run_store.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Analysis.tsx  Arena.tsx  History.tsx  Hub.tsx  Lobby.tsx  Settings.tsx
frontend/src/services/: api.ts  ws.ts
frontend/src/stores/: arenaStore.ts  providerStore.ts  (+1 more)
(+6 files in other folders)
